ukol 06 / upravena metoda pro test